<resources>
    <string name="app_name">Do Something</string>
    <string name="special_smiley">&#9786;</string>
    <string name="username">Email / Cell</string>
    <string name="password">Password</string>
    <string name="log_in_auth_failed">Password is incorrect. Please try again.</string>
    <string name="log_in_failed">Login failed. Please check your internet connection and try again.</string>
    <string name="register_failed">Registration failed. Please check your internet connection and try again.</string>
    <string name="auth_failed">User authentication has failed.</string>
    <string name="exit_confirm">Are you sure you want to exit?</string>
    <string name="facebook_auth_failed">Facebook login failed. Please try again.</string>
    <string name="facebook_join">Join With Facebook</string>
    <string name="facebook_sign_in">Login With Facebook</string>
    <string name="form_submit_failed">The form submit has failed. Please try again.</string>
    <string name="gallery_feed_failed">The gallery has failed to load. Please try again.</string>
    <string name="campaign_load_error">There was an error loading the current campaign. Please try again later.</string>
    <string name="campaigns_failed">The current campaigns have failed to load. Please try again.</string>
    <string name="campaigns_no_internet">An internet connection is required. Please enable an internet connection and try again.</string>
    <string name="log_in">Log In</string>
    <string name="log_in_upper">LOG IN</string>
    <string name="register_password">Password *</string>
    <string name="sign_up_upper">BECOME A MEMBER</string>
    <string name="get_started_upper">GET STARTED</string>
    <string name="go_upper">GO</string>
    <string name="ok_upper">OK</string>
    <string name="yes_upper">YES</string>
    <string name="no_upper">NO</string>
    <string name="continue_upper">CONTINUE</string>
    <string name="cancel_upper">CANCEL</string>
    <string name="edit_upper">EDIT</string>
    <string name="save_upper">SAVE</string>
    <string name="username_upper">USERNAME *</string>
    <string name="mobile">Cell Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_upper">LAST NAME *</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="password_upper">PASSWORD *</string>
    <string name="birthday">Birthday *</string>
    <string name="link_description">External Link</string>
    <string name="select_image">Select Image</string>
    <string name="required_field">%1$s is required.</string>
    <string name="required_instructions">* Required Field</string>
    <string name="login_or">or</string>
    <string name="logging_in">Logging in&#8230;</string>
    <string name="registering">Registering&#8230;</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="register">Register</string>
    <string name="register_upper">REGISTER</string>
    <string name="register_title">Become A Member</string>
    <string name="register_disclaimer">By registering you accept the &lt;a href="http://www.dosomething.org/about/terms-of-service">terms of use&lt;/a> and &lt;a href="http://www.dosomething.org/about/privacy">privacy policy&lt;/a>.</string>
    <string name="profile_browse_campaigns">PICK A PROJECT</string>
    <string name="profile_config">Profile Stats</string>
    <string name="profile_config_campaigns_joined">Campaigns Joined: %1$d</string>
    <string name="profile_config_date_empty">--/--/----</string>
    <string name="profile_config_ftafs_sent">Friends Texted: %1$d</string>
    <string name="profile_config_member_since">Member Since: %1$s</string>
    <string name="profile_config_sms_campaigns_started">SMS Experiences Started: %1$d</string>
    <string name="profile_config_your_causes">Your Causes</string>
    <string name="profile_logged_out_teaser">Make the world suck less. Pick a project to get started.</string>
    <string name="profile_login_button">GET STARTED NOW</string>
    <string name="profile_session_stale_error">Uh oh. We\'ve lost authentication with the server. It\'s probably the gremlins. Please login again.</string>
    <string name="profile_title">Profile</string>
    <string name="profile_update_error">There was an error updating your profile. Check your internet connection and try again later.</string>
    <string name="drawer_close">Navigation Closed</string>
    <string name="drawer_item_campaigns">Campaigns</string>
    <string name="drawer_item_login">Log In</string>
    <string name="drawer_item_logout">Log Out</string>
    <string name="drawer_item_profile">Profile</string>
    <string name="drawer_item_reminders">Reminders</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_open">Navigation Open</string>
    <string name="campaigns_tab_browse_title">Do It</string>
    <string name="campaigns_tab_completed_title">Done</string>
    <string name="campaigns_tab_completed_empty_header">No Campaigns Finished</string>
    <string name="campaigns_tab_completed_none_found">Complete campaigns and keep track of how you\'re making the world a better place.</string>
    <string name="campaigns_tab_in_progress_title">Doing It</string>
    <string name="campaigns_tab_in_progress_empty_header">No Campaigns Started</string>
    <string name="campaigns_tab_in_progress_none_found">Find and sign up for one of the campaigns under the DO IT section to start making the world suck less.</string>
    <string name="campaigns_title">Campaigns</string>
    <string name="campaigns_upgrade_popup">A new update is available!</string>
    <string name="campaign_date_ends">Ends: %1$s</string>
    <string name="campaign_share_title">Share</string>
    <string name="campaign_how_to_title">How To</string>
    <string name="campaign_gallery_title">Gallery</string>
    <string name="campaign_moreInfo_title">More Information</string>
    <string name="campaign_people_title">Meet The People</string>
    <string name="campaign_prizes_title">Scholarship</string>
    <string name="campaign_fragment_did_this_button">I DID THIS</string>
    <string name="campaign_fragment_do_header">Do It</string>
    <string name="campaign_fragment_do_tab_title">DO IT</string>
    <string name="campaign_fragment_learn_header">Learn About the Issue</string>
    <string name="campaign_fragment_learn_tab_title">KNOW IT</string>
    <string name="campaign_fragment_plan_header">Plan Your Campaign</string>
    <string name="campaign_fragment_plan_tab_title">PLAN IT</string>
    <string name="campaign_fragment_progress_denied_title">Campaign Progress Denied</string>
    <string name="campaign_fragment_progress_denied_body">Whoa there! You gotta hit that DO THIS button first before you get to see anything more.</string>
    <string name="campaign_fragment_reportback_body">Show off the great work that you\'ve done! Send us a photo of your participation in this campaign.</string>
    <string name="campaign_fragment_reportback_header">Prove It!</string>
    <string name="campaign_fragment_reportback_title">PROVE IT</string>
    <string name="report_back_title">Tell Us</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="campaign_faq_title">FAQ</string>
    <string name="campaign_resources_title">Resources</string>
    <string name="profile_campaign_synced">Looks like you signed up for campaigns on our website! We\'ve gone ahead and added them to your list here.</string>
    <string name="profile_no_campaigns">Hey! It looks like you haven\'t signed up for any of our campaigns.\n\nSign up for some, then check back here to see what you\'ve done and what you can do next!</string>
    <string name="profile_load_error">Unable to load Profile data at this time. Please try again later.</string>
    <string name="campaign_report_back_button">TELL US!</string>
    <string name="campaign_sfg_find_me">Find Me</string>
    <string name="campaign_sfg_my_pets">MY PETS</string>
    <string name="campaign_sfg_my_submissions">My Submissions</string>
    <string name="campaign_sfg_no_results">No results were found.</string>
    <string name="campaign_sfg_p4p_share_description">%1$s is super cute and deserves a loving home. Could you be %1$s\'s new owner?</string>
    <string name="campaign_sfg_p4p_share_title">Want to adopt me?</string>
    <string name="campaign_sfg_share_me">Share Me</string>
    <string name="campaign_sfg_submit_error">There was an error attempting to submit. Please try again later.</string>
    <string name="campaign_sfg_submit_pet">SUBMIT A PET</string>
    <string name="campaign_sfg_submit_success">Thanks for your submission!</string>
    <string name="campaign_sfg_submitting">Submitting…</string>
    <string name="campaign_sfg_update_error">Unable to update. Please check your internet connection and try again.</string>
    <string name="campaign_sign_up_button">DO THIS</string>
    <string name="campaign_sign_up_button_already_signed_up">YOU\'RE SIGNED UP</string>
    <string name="campaign_sign_up_sms_action_alert_title">About the Texting Experience</string>
    <string name="campaign_sign_up_sms_action_alert_body">You\'re about to begin the %1$s experience. We\'ll send you a message from 38383 so you can get started.</string>
    <string name="campaign_sign_up_sms_error">There was an error starting the SMS experience. Please try again.</string>
    <string name="campaign_sign_up_sms_error_with_keyword">There was an error starting the SMS experience. Try again or text %1$s to 38383 to begin.</string>
    <string name="campaign_sign_up_sms_success">You\'ll be getting a message soon from 38383 to begin!</string>
    <string name="campaign_sign_up_success">You\'re signed up!</string>
    <string name="campaign_share_button">SHARE THIS CAMPAIGN</string>
    <string name="campaign_share_signup_header">Thanks for signing up!</string>
    <string name="campaign_share_report_header">Thanks for rocking this campaign!</string>
    <string name="campaign_share_chooser">Share on</string>
    <string name="campaign_how_to">HOW TO</string>
    <string name="campaign_gallery">GALLERY</string>
    <string name="campaign_people">MEET THE PEOPLE</string>
    <string name="campaign_prizes">SCHOLARSHIP</string>
    <string name="campaign_locator">LOCATOR</string>
    <string name="campaign_moreInfo">MORE INFORMATION</string>
    <string name="campaign_resources">RESOURCES</string>
    <string name="campaign_faq">FAQ</string>
    <string name="campaign_loading">Loading Campaign…</string>
    <string name="campaign_prizes_rules">Official Rules and Regulations</string>
    <string name="gallery_image_item_display_error">Unable to load the image</string>
    <string name="gallery_image_share_title">DoSomething.org %1$s</string>
    <string name="gallery_image_author">Submitted by: %1$s</string>
    <string name="cause_confirm">Thanks for letting us know! Keep an eye out for our campaigns tagged with your causes.</string>
    <string name="cause_title">Select Your Causes</string>
    <string name="cause_call_to_action">Help us to know more about you! Select the top 3 causes YOU care about below.</string>
    <string name="cause_animals">Animals</string>
    <string name="cause_bullying_violence">Bullying and Violence</string>
    <string name="cause_disasters">Disasters</string>
    <string name="cause_discrimination">Discrimination</string>
    <string name="cause_education">Education</string>
    <string name="cause_environment">Environment</string>
    <string name="cause_homelessness_poverty">Homelessness and Poverty</string>
    <string name="cause_human_rights">Human Rights</string>
    <string name="cause_our_troops">Our Troops</string>
    <string name="sms_refer_button">SHARE WITH FRIENDS</string>
    <string name="sms_refer_title">Share With Friends</string>
</resources>