<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:orientation="vertical"
        android:layout_weight="1.0"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout android:id="@+id/image_container"
                android:layout_width="match_parent"
                android:layout_height="156dp"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/frame"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                    <ImageView android:id="@+id/background" style="@style/CampaignImageBackground"/>
                    <ImageView android:id="@+id/image" style="@style/CampaignImage"/>
                    <TextView
                        android:id="@+id/dates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CampaignDatesText"/>
                </FrameLayout>

            </LinearLayout>

            <LinearLayout style="@style/CampaignTeaserRow">
                <TextView android:id="@+id/teaser" style="@style/CampaignTeaserText"/>
            </LinearLayout>

            <LinearLayout style="@style/CampaignSignUpRow">
                <Button
                    android:id="@+id/sign_up"
                    android:onClick="signUp"
                    style="@style/CampaignSignUpButton"
                    android:text="@string/campaign_sign_up_button"
                    android:background="@drawable/main_button_selector"/>
                <Button
                    android:id="@+id/report_back"
                    android:onClick="reportBack"
                    style="@style/CampaignSignUpButton"
                    android:text="@string/campaign_report_back_button"
                    android:background="@drawable/main_button_selector"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sms_refer_container"
                android:visibility="gone"
                style="@style/CampaignSignUpRow" >

                <TextView android:id="@+id/sms_refer_text" style="@style/CampaignSMSReferText" />

                <Button
                    android:id="@+id/sms_refer"
                    android:onClick="smsRefer"
                    style="@style/CampaignSignUpButton"
                    android:text="@string/sms_refer_button"
                    android:background="@drawable/main_button_selector" />

            </LinearLayout>

            <FrameLayout android:id="@+id/frmVideo"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="playVideo">
                <ImageView android:id="@+id/imgVideoThumb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:gravity="center"
                    android:adjustViewBounds="true"/>
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/play"/>
            </FrameLayout>

            <ImageView android:id="@+id/imgThumb"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:gravity="center"
                android:adjustViewBounds="true"/>

            <!-- Nav buttons to campaign subpages -->
            <Button android:id="@+id/actions"
                android:onClick="onClickActions"
                style="@style/CampaignButton"
                android:visibility="gone"
                android:text="@string/campaign_actions"/>
            <Button android:id="@+id/howTo"
                android:onClick="onClickHowTo"
                style="@style/CampaignButton"
                android:visibility="gone"
                android:text="@string/campaign_how_to"/>
            <Button android:id="@+id/gallery"
                android:onClick="onClickGallery"
                style="@style/CampaignButton"
                android:visibility="gone"
                android:text="@string/campaign_gallery"/>
            <Button android:id="@+id/prizes"
                android:onClick="onClickPrizes"
                style="@style/CampaignButton"
                android:visibility="gone"
                android:text="@string/campaign_prizes"/>
            <Button android:id="@+id/people"
                android:onClick="onClickPeople"
                style="@style/CampaignButton"
                android:visibility="gone"
                android:text="@string/campaign_people"/>
            <Button android:id="@+id/resources"
                android:onClick="onClickResources"
                style="@style/CampaignButton"
                android:visibility="gone"
                android:text="@string/campaign_moreInfo"/>
            <Button android:id="@+id/faq"
                android:onClick="onClickFaq"
                style="@style/CampaignButton"
                android:visibility="gone"
                android:text="@string/campaign_faq"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>