<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_weight="1.0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_rounded_background"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <com.facebook.widget.LoginButton
            xmlns:fb="http://schemas.android.com/apk/res-auto"
            android:id="@+id/button_facebook_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            fb:login_text="@string/facebook_sign_in"
            fb:logout_text="@string/facebook_sign_in"/>

        <TextView
            android:id="@+id/or_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="OR"
            android:textSize="@dimen/font_size_header_2"/>

        <EditText
            android:id="@+id/username"
            android:focusableInTouchMode="true"
            android:hint="@string/username"
            android:inputType="text"
            android:layout_margin="10dp"
            style="@style/WebFormRowInput"/>

        <EditText
            android:id="@+id/password"
            style="@style/WebFormRowInput"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_margin="10dp"/>

        <Button
            style="@style/ButtonPrimary"
            android:id="@+id/button_login"
            android:layout_marginTop="10dp"
            android:text="@string/log_in_upper"/>

    </LinearLayout>
</RelativeLayout>